# swagger/swagger.yml
@@ -1,7 +1,8 @@
 swagger: "2.0"
 info:
   title: beego Test API
-  description: beego has a very cool tools to autogenerate documents for your API
+  description: |
+    beego has a very cool tools to autogenerate documents for your API
   version: 1.0.0
   termsOfService: http://beego.me/
   contact:
@@ -11,11 +12,37 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
+  /sabatico/crear:
+    post:
+      tags:
+      - sabatico
+      description: |-
+        Crea un sabático consumiendo el CRUD
+        <br>
+      operationId: SabaticoController.PostCrearSabatico
+      parameters:
+      - in: body
+        name: body
+        description: Body para crear sabático
+        required: true
+        schema:
+          $ref: '#/definitions/models.CrearSabaticoRequest'
+      responses:
+        "201":
+          description: ""
+          schema:
+            $ref: '#/definitions/models.CrearSabaticoResponse'
+        "400":
+          description: '{object} models.CrearSabaticoResponse'
+        "500":
+          description: '{object} models.CrearSabaticoResponse'
   /solicitud/:
     post:
       tags:
       - solicitud
-      description: create Solicitud
+      description: |-
+        create Solicitud
+        <br>
       operationId: SolicitudController.Create
       parameters:
       - in: body
@@ -35,7 +62,9 @@ paths:
     post:
       tags:
       - solicitud
-      description: Aprueba o rechaza una solicitud creando un registro en el historial
+      description: |-
+        Aprueba o rechaza una solicitud creando un registro en el historial
+        <br>
       operationId: SolicitudController.Aprobar_Rechazar
       parameters:
       - in: body
@@ -55,7 +84,9 @@ paths:
     get:
       tags:
       - solicitud
-      description: Obtener formularios por documentoId
+      description: |-
+        Obtener formularios por documentoId
+        <br>
       operationId: SolicitudController.GetFormulariosByDocumentoId
       parameters:
       - in: path
@@ -80,7 +111,9 @@ paths:
     post:
       tags:
       - solicitud
-      description: Radicar una solicitud (cambiar estado y crear registros)
+      description: |-
+        Radicar una solicitud (cambiar estado y crear registros)
+        <br>
       operationId: SolicitudController.Radicar
       parameters:
       - in: path
@@ -107,21 +140,43 @@ paths:
     post:
       tags:
       - soporte_solicitud
-      description: create SoporteSolicitud con múltiples documentos
+      description: |-
+        create SoporteSolicitud con múltiples documentos
+        <br>
       operationId: SoporteSolicitudController.Create
 definitions:
-  5708.0xc000440360.false:
-    title: "false"
-    type: object
-  5774.0xc000440390.false:
-    title: "false"
-    type: object
-  6629.0xc000440690.false:
-    title: "false"
-    type: object
   interface{}:
     title: interface{}
     type: object
+  models.CrearSabaticoRequest:
+    title: CrearSabaticoRequest
+    type: object
+    properties:
+      estado_sabatico_id:
+        type: integer
+        format: int64
+      fecha_fin:
+        type: string
+      fecha_inicio:
+        type: string
+      observaciones:
+        type: string
+      tercero_id:
+        type: integer
+        format: int64
+  models.CrearSabaticoResponse:
+    title: CrearSabaticoResponse
+    type: object
+    properties:
+      data:
+        $ref: '#/definitions/models.interface'
+      message:
+        type: string
+      status:
+        type: integer
+        format: int64
+      success:
+        type: boolean
   models.Solicitud:
     title: Solicitud
     type: object
@@ -136,12 +191,12 @@ definitions:
         type: integer
         format: int64
       SabaticoId:
-        $ref: '#/definitions/5774.0xc000440390.false'
+        $ref: '#/definitions/models.interface'
       TerceroId:
         type: integer
         format: int64
       TipoSolicitudId:
-        $ref: '#/definitions/5708.0xc000440360.false'
+        $ref: '#/definitions/models.interface'
   models.SolicitudRequest:
     title: SolicitudRequest
     type: object
@@ -164,7 +219,10 @@ definitions:
     type: object
     properties:
       Solicitud:
-        $ref: '#/definitions/6629.0xc000440690.false'
+        $ref: '#/definitions/models.interface'
+  models.interface:
+    title: interface
+    type: object
 tags:
 - name: solicitud
   description: |
@@ -173,7 +231,3 @@ tags:
 - name: soporte_solicitud
   description: |
     SoporteSolicitudController operations for SoporteSolicitud
-- name: sabatico
-  description: |
-    SabaticoController operations for Sabatico
-    @Tag Sabatico
